gitops/platform-apps/mastodon/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mastodon
  labels:
    app.kubernetes.io/name: mastodon
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
