gitops/platform-apps/mastodon/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mastodon
  namespace: mastodon
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mastodon.__ZONE_NAME__`) && PathPrefix(`/api/v1/streaming`)
      services:
        - kind: Service
          name: mastodon-streaming
          port: 4000
    - kind: Rule
      match: Host(`mastodon.__ZONE_NAME__`)
      services:
        - kind: Service
          name: mastodon-web
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mastodon-netbird
  namespace: mastodon
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`mastodon.__ZONE_NAME__`) && PathPrefix(`/api/v1/streaming`)
      services:
        - kind: Service
          name: mastodon-streaming
          port: 4000
    - kind: Rule
      match: Host(`mastodon.__ZONE_NAME__`)
      services:
        - kind: Service
          name: mastodon-web
          port: 80
